# nexacro-dev-license-request

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  request-license.yml
.governance/: coding-style.md  env.yaml  memory.md  patterns.md
.spec/license-request/: spec.yaml
.tasks/: backlog.yaml  current.yaml  done.yaml
src/: __init__.py  config.py  exceptions.py  nexacro_license_requester.py  session_manager.py
tests/: __init__.py  test_config.py  test_integration.py  test_license_requester.py  test_session_manager.py
